--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-<svg xmlns="http://www.w3.org/2000/svg" id="header" viewBox="0 0 843.8 600">
+<svg xmlns="http://www.w3.org/2000/svg" id="header" width="843.8" height="600" viewBox="0 0 843.8 600">
   <path id="container" fill="#DCD0C0" stroke="#4E4F56" stroke-width="5.21" stroke-miterlimit="10" d="M830.2 49.2v444c0 13.7-20.3 26.2-52.8 32.6l-311.9 58.5c-27.5 5.4-60.3 5.6-88.3.6L65.4 525.4c-34.3-6.1-56.1-19-56.1-33.2v-443c0-20.3 44.1-36.8 98.6-36.8h623.8c54.4 0 98.5 16.5 98.5 36.8z" stroke-linecap="round" stroke-linejoin="round"/>
   <g id="beer" fill="#DB9E60">
     <path d="M523.6 102h13c20 0 38.9 5.2 38.9 29.2 0 7.7-4.2 16.8-11.4 20.1v.3c12.5 2.3 21.3 14.5 21.3 26.9 0 21.3-18.2 29.7-36.9 29.7h-24.8V102zm13.3 47.1h3.4c12.5 0 22.8-2.5 22.8-17.8 0-14.9-10.1-17.5-22.5-17.5h-3.7v35.3zm0 47.3H547c12.3 0 25.1-3.7 25.1-18.7 0-14.9-15.2-18-27-18h-8.2v36.7z"/>
@@ -113,7 +113,7 @@
 
 <div class="grid">
     <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 436 163.5">
+    <svg xmlns="http://www.w3.org/2000/svg" width="436" height="163.5" viewBox="0 0 436 163.5">
       <g id="cerebral_cortex">
         <path id="label_1_" fill="#DCD0C0" stroke="#4E4F56" stroke-width="5.21" stroke-miterlimit="10" d="M404.2 5H251.7c-13.3 0-24.1 4.3-24.1 9.7v30.9h-11.4V12.3c0-3.3-10.2-5.9-22.7-5.9H29.3C16.8 6.3 6.6 9 6.6 12.3v119.5c0 2 3.7 3.8 9.9 4.9l86.4 15.4c8 1.4 18.6 1.4 26.4-.2l77.8-15.2c5.7-1.1 9.1-2.9 9.1-4.8V99.5h11.4v31.4c0 3.7 5.3 7.1 13.7 8.7l80.5 15.4c6.9 1.3 14.9 1.3 21.6-.2l72.1-15.1c7.9-1.7 12.9-5 12.9-8.5V14.6c-.1-5.3-10.9-9.6-24.2-9.6z" stroke-linecap="round" stroke-linejoin="round"/>
         <g id="focused-text">
@@ -350,7 +350,7 @@
     </svg>
   </div>
   <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-    <svg xmlns="http://www.w3.org/2000/svg" id="battery_1_" viewBox="0 0 399.3 234.8">
+    <svg xmlns="http://www.w3.org/2000/svg" id="battery_1_" width="399.3" height="234.8" viewBox="0 0 399.3 234.8">
       <path id="energy-flow-path-1_1_" fill="none" stroke="#4E4F56" stroke-width="5" stroke-miterlimit="10" d="M47.9 113.5v74.2h11l3.4-16.9 5.3 32.7 5.7-15.8h12" stroke-linecap="round" stroke-linejoin="round"/>
       <path id="energy-flow-path-1" fill="none" stroke="#4E4F56" stroke-width="4.894" stroke-miterlimit="10" d="M344.5 118v71h-11l-3.4-16.1-5.3 31.3-5.7-15.2h-12" stroke-linecap="round" stroke-linejoin="round"/>
       <path id="label" fill="#DCD0C0" stroke="#4E4F56" stroke-width="5" stroke-miterlimit="10" d="M371.1 5.1h-128c-9.8 0-17.7 2.2-17.7 4.9v32.8h-10.6V10.1c0-2.7-10.2-4.9-22.8-4.9H27c-12.6 0-22.8 2.2-22.8 4.9v99.2c0 1.6 3.4 3 9.1 3.9l78.2 12.6c7.8 1.3 18.5 1.3 26.5.1l86.8-12.8c6.2-.9 10-2.4 10-4.1V96.9h10.6v12.4c0 1.6 2.6 3 7.1 3.9l60.6 12.6c6.1 1.3 14.3 1.3 20.6.1l67.3-12.8c4.8-.9 7.7-2.4 7.7-4.1V10.1c.1-2.7-7.8-5-17.6-5z" stroke-linecap="round" stroke-linejoin="round"/>
