--- a/index.html
+++ b/index.html
@@ -14,21 +14,56 @@
 </head>
 <body>
 
-<svg xmlns="http://www.w3.org/2000/svg" id="header" width="843.8" height="600" viewBox="0 0 843.8 600">
-  <path id="container" fill="#DCD0C0" stroke="#4E4F56" stroke-width="5.21" stroke-miterlimit="10" d="M830.2 49.2v444c0 13.7-20.3 26.2-52.8 32.6l-311.9 58.5c-27.5 5.4-60.3 5.6-88.3.6L65.4 525.4c-34.3-6.1-56.1-19-56.1-33.2v-443c0-20.3 44.1-36.8 98.6-36.8h623.8c54.4 0 98.5 16.5 98.5 36.8z" stroke-linecap="round" stroke-linejoin="round"/>
-  <g id="beer" fill="#DB9E60">
-    <path d="M523.6 102h13c20 0 38.9 5.2 38.9 29.2 0 7.7-4.2 16.8-11.4 20.1v.3c12.5 2.3 21.3 14.5 21.3 26.9 0 21.3-18.2 29.7-36.9 29.7h-24.8V102zm13.3 47.1h3.4c12.5 0 22.8-2.5 22.8-17.8 0-14.9-10.1-17.5-22.5-17.5h-3.7v35.3zm0 47.3H547c12.3 0 25.1-3.7 25.1-18.7 0-14.9-15.2-18-27-18h-8.2v36.7z"/>
-    <path d="M593.1 102h57.1v12.1h-43.8v29.7h42.5V156h-42.5v40.2h43.8v12.1h-57.1V102z"/>
-    <path d="M659.4 102h57.1v12.1h-43.8v29.7h42.5V156h-42.5v40.2h43.8v12.1h-57.1V102z"/>
-    <path d="M791.9 208.2h-16.1l-31.3-44.9H739v44.9h-13.2V102h16.1c9.4 0 19.6.1 28 4.9 8.9 5.2 13.9 15.2 13.9 25.4 0 15.2-10.1 27.9-25.5 29.7l33.6 46.2zM739 152.3h4.2c13.5 0 28.2-2.5 28.2-19.4 0-16.6-15.8-19-28.9-19H739v38.4z"/>
-    <g>
-      <path d="M559.1 223.9v8.3h-7v36.4h-8.8v-36.4h-6.9v-8.3h22.7z"/>
-      <path d="M577.6 223.9v17.5h9v-17.5h8.8v44.7h-8.8v-18.9h-9v18.9h-8.8v-44.7h8.8z"/>
-      <path d="M625.1 223.9v8.3h-9v9.7h7.9v8.3h-7.9v10.1h9.1v8.3h-17.9v-44.7h17.8z"/>
-      <path d="M665.2 223.9v44.7h-8.8v-44.7h8.8z"/>
-      <path d="M677.2 268.6v-44.7h6.7c1.5 0 20-2.3 20 22.7 0 12.8-4.9 22-18.9 22h-7.8zm17.9-22.1c0-5.7-1.8-14.7-9.1-14.7v28.8c7.1.4 9.1-8.5 9.1-14.1z"/>
-      <path d="M732 223.9v8.3h-9v9.7h7.9v8.3H723v10.1h9.1v8.3h-17.9v-44.7H732z"/>
-      <path d="M760.1 223.9l10.7 44.7h-9.4l-1.7-7.5h-9l-1.6 7.5h-8.8l10.4-44.7h9.4zm-3.9 18.2l-1-6.8h-.1l-.9 6.8-1.9 11.9h6.2l-2.3-11.9z"/>
+  <svg xmlns="http://www.w3.org/2000/svg" id="header" width="843.8" height="600" viewBox="0 0 843.8 600">
+    <path id="container" fill="#DCD0C0" stroke="#4E4F56" stroke-width="5.21" stroke-miterlimit="10" d="M830.2 49.2v444c0 13.7-20.3 26.2-52.8 32.6l-311.9 58.5c-27.5 5.4-60.3 5.6-88.3.6L65.4 525.4c-34.3-6.1-56.1-19-56.1-33.2v-443c0-20.3 44.1-36.8 98.6-36.8h623.8c54.4 0 98.5 16.5 98.5 36.8z" stroke-linecap="round" stroke-linejoin="round"/>
+    <g id="beer" fill="#DB9E60">
+      <path d="M523.6 102h13c20 0 38.9 5.2 38.9 29.2 0 7.7-4.2 16.8-11.4 20.1v.3c12.5 2.3 21.3 14.5 21.3 26.9 0 21.3-18.2 29.7-36.9 29.7h-24.8V102zm13.3 47.1h3.4c12.5 0 22.8-2.5 22.8-17.8 0-14.9-10.1-17.5-22.5-17.5h-3.7v35.3zm0 47.3H547c12.3 0 25.1-3.7 25.1-18.7 0-14.9-15.2-18-27-18h-8.2v36.7z"/>
+      <path d="M593.1 102h57.1v12.1h-43.8v29.7h42.5V156h-42.5v40.2h43.8v12.1h-57.1V102z"/>
+      <path d="M659.4 102h57.1v12.1h-43.8v29.7h42.5V156h-42.5v40.2h43.8v12.1h-57.1V102z"/>
+      <path d="M791.9 208.2h-16.1l-31.3-44.9H739v44.9h-13.2V102h16.1c9.4 0 19.6.1 28 4.9 8.9 5.2 13.9 15.2 13.9 25.4 0 15.2-10.1 27.9-25.5 29.7l33.6 46.2zM739 152.3h4.2c13.5 0 28.2-2.5 28.2-19.4 0-16.6-15.8-19-28.9-19H739v38.4z"/>
+      <g>
+        <path d="M559.1 223.9v8.3h-7v36.4h-8.8v-36.4h-6.9v-8.3h22.7z"/>
+        <path d="M577.6 223.9v17.5h9v-17.5h8.8v44.7h-8.8v-18.9h-9v18.9h-8.8v-44.7h8.8z"/>
+        <path d="M625.1 223.9v8.3h-9v9.7h7.9v8.3h-7.9v10.1h9.1v8.3h-17.9v-44.7h17.8z"/>
+        <path d="M665.2 223.9v44.7h-8.8v-44.7h8.8z"/>
+        <path d="M677.2 268.6v-44.7h6.7c1.5 0 20-2.3 20 22.7 0 12.8-4.9 22-18.9 22h-7.8zm17.9-22.1c0-5.7-1.8-14.7-9.1-14.7v28.8c7.1.4 9.1-8.5 9.1-14.1z"/>
+        <path d="M732 223.9v8.3h-9v9.7h7.9v8.3H723v10.1h9.1v8.3h-17.9v-44.7H732z"/>
+        <path d="M760.1 223.9l10.7 44.7h-9.4l-1.7-7.5h-9l-1.6 7.5h-8.8l10.4-44.7h9.4zm-3.9 18.2l-1-6.8h-.1l-.9 6.8-1.9 11.9h6.2l-2.3-11.9z"/>
+      </g>
+    </g>
+    <g id="coffee">
+      <g fill="#9B3D3B">
+        <path d="M537.1 491.1h-3.7v-26.2h-7v-3.4h17.8v3.4h-7v26.2z"/>
+        <path d="M562.2 473.4v-11.9h3.7v29.6h-3.7v-14.2h-14.1v14.2h-3.7v-29.6h3.7v11.9h14.1z"/>
+        <path d="M568.9 461.4h15.9v3.4h-12.2v8.3h11.9v3.4h-11.9v11.2h12.2v3.4h-15.9v-29.7z"/>
+        <path d="M596 461.4h15.9v3.4h-12.2v8.3h11.9v3.4h-11.9v11.2h12.2v3.4H596v-29.7z"/>
+        <path d="M612.4 461.4h4.2l6.1 10.8 6.4-10.8h4.2l-8.5 14.1 9 15.5h-4.1l-7-12.1-7.3 12.1h-4.1l9.3-15.5-8.2-14.1z"/>
+        <path d="M634.3 461.4h15.9v3.4H638v8.3h11.9v3.4H638v11.2h12.2v3.4h-15.9v-29.7z"/>
+        <path d="M674 467.1c-2.1-1.9-5-2.9-7.8-2.9-6.6 0-11.7 5.5-11.7 12.1 0 6.5 5 12 11.6 12 2.9 0 5.7-1.1 7.9-3.1v4.4c-2.3 1.3-5.2 2.1-7.8 2.1-8.4 0-15.4-6.7-15.4-15.3 0-8.8 7-15.6 15.8-15.6 2.6 0 5.2.6 7.5 2v4.3z"/>
+        <path d="M679.2 461.4v17.5c0 4.8 1.5 9.3 7.2 9.3s7.2-4.5 7.2-9.3v-17.5h3.7v18.7c0 6.5-4 11.5-10.8 11.5-6.8 0-10.8-5-10.8-11.5v-18.7h3.5z"/>
+        <path d="M707.9 491.1h-3.7v-26.2h-7v-3.4H715v3.4h-7v26.2z"/>
+        <path d="M719.1 491.1h-3.7v-29.6h3.7v29.6z"/>
+        <path d="M751.2 476.2c0 8.8-7 15.4-15.5 15.4s-15.5-6.6-15.5-15.4c0-8.5 7-15.4 15.5-15.4s15.5 7 15.5 15.4zm-3.7 0c0-6.5-4.9-12-11.8-12-7 0-11.8 5.5-11.8 12 0 6.8 5.4 12 11.8 12s11.8-5.2 11.8-12z"/>
+        <path d="M752.1 460l22.2 23.3v-21.9h3.7v30.8L755.8 469v22.1h-3.7V460z"/>
+      </g>
+      <g fill="#9B3D3B">
+        <path d="M552.2 393.4c-3.8-4.7-9.6-7.5-15.5-7.5-13.2 0-20.7 12.1-20.7 24.3 0 11.8 7.8 23.7 20.6 23.7 5.9 0 11.8-3.1 15.6-7.5v16.3c-5.1 2.4-10.3 4.2-16 4.2-19.8 0-34.4-17.1-34.4-36.5 0-20 14.1-37.6 34.7-37.6 5.5 0 10.9 1.5 15.7 4.1v16.5z"/>
+        <path d="M592.7 447c-21.5 0-34.8-16.4-34.8-37.1 0-20.9 13.8-37 34.8-37s34.8 16 34.8 37c0 20.7-13.4 37.1-34.8 37.1zm0-60.6c-13 0-20.6 11.5-20.6 22.9 0 10.8 5.4 24.2 20.6 24.2s20.6-13.3 20.6-24.2c0-11.4-7.6-22.9-20.6-22.9z"/>
+        <path d="M647.9 386.7v15.5h19.9v11.9h-19.9v31h-13.7v-70.4h34.9v11.9h-21.2z"/>
+        <path d="M691.1 386.7v15.5H711v11.9h-19.9v31h-13.7v-70.4h34.9v11.9h-21.2z"/>
+        <path d="M734.3 386.7v15.5h21.8v11.9h-21.8v19H757V445h-36.4v-70.4H757v11.9h-22.7z"/>
+        <path d="M779.8 386.7v15.5h21.8v11.9h-21.8v19h22.7V445h-36.4v-70.4h36.4v11.9h-22.7z"/>
+      </g>
+      <g fill="#B1928A">
+        <path d="M631.3 321.8l14.6-36.6h17l-25.8 60.3h-12.2l-25.4-60.3h17l14.8 36.6z"/>
+        <path d="M691.2 300.7c-2.9-2.4-6.6-4-10.4-4-2.9 0-6.7 1.7-6.7 5 0 3.5 4.2 4.9 7 5.8l4 1.2c8.4 2.5 14.9 6.7 14.9 16.5 0 6-1.4 12.2-6.2 16.2-4.7 4-11 5.7-17.1 5.7-7.6 0-15-2.6-21.2-6.9l6.7-12.6c3.9 3.4 8.6 6.2 13.9 6.2 3.7 0 7.6-1.8 7.6-6.1 0-4.4-6.2-5.9-9.5-6.9-9.8-2.8-16.3-5.4-16.3-17 0-12.2 8.7-20.2 20.8-20.2 6.1 0 13.5 1.9 18.9 5l-6.4 12.1z"/>
+      </g>
+    </g>
+    <g id="heat-lines" fill="none" stroke="#9B3D3B" stroke-width="5" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round">
+      <path d="M520.2 319.9s-6.1 10.9 2 19.7-2.1 21.4-2.1 21.4"/>
+      <path d="M544.6 319.9s-6.1 10.9 2 19.7-2.1 21.4-2.1 21.4"/>
+      <path d="M769.8 319.9s-6.1 10.9 2 19.7c8.1 8.8-2.1 21.4-2.1 21.4"/>
+      <path d="M794.3 319.9s-6.1 10.9 2 19.7c8.1 8.8-2.1 21.4-2.1 21.4"/>
     </g>
   </g>
   <g id="coffee">
