--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link href="css/typography.css" rel="stylesheet">
   <link rel="shortcut icon" href="images/favicon.ico">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name ="handheldfriendly" content="true">
+  <meta name="handheldfriendly" content="true">
   <meta name="mobileoptimized" content="240">
 </head>
 <body>
@@ -110,12 +110,11 @@
     </g>
   </svg>
 
-
   <div class="grid">
-      <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
       <svg xmlns="http://www.w3.org/2000/svg" width="436" height="163.5" viewBox="0 0 436 163.5">
-        <g id="cerebral_cortex">
-          <path id="label_1_" fill="#DCD0C0" stroke="#4E4F56" stroke-width="5.21" stroke-miterlimit="10" d="M404.2 5H251.7c-13.3 0-24.1 4.3-24.1 9.7v30.9h-11.4V12.3c0-3.3-10.2-5.9-22.7-5.9H29.3C16.8 6.3 6.6 9 6.6 12.3v119.5c0 2 3.7 3.8 9.9 4.9l86.4 15.4c8 1.4 18.6 1.4 26.4-.2l77.8-15.2c5.7-1.1 9.1-2.9 9.1-4.8V99.5h11.4v31.4c0 3.7 5.3 7.1 13.7 8.7l80.5 15.4c6.9 1.3 14.9 1.3 21.6-.2l72.1-15.1c7.9-1.7 12.9-5 12.9-8.5V14.6c-.1-5.3-10.9-9.6-24.2-9.6z" stroke-linecap="round" stroke-linejoin="round"/>
+        <g id="cerebral-cortex">
+          <path id="label-1" fill="#DCD0C0" stroke="#4E4F56" stroke-width="5.21" stroke-miterlimit="10" d="M404.2 5H251.7c-13.3 0-24.1 4.3-24.1 9.7v30.9h-11.4V12.3c0-3.3-10.2-5.9-22.7-5.9H29.3C16.8 6.3 6.6 9 6.6 12.3v119.5c0 2 3.7 3.8 9.9 4.9l86.4 15.4c8 1.4 18.6 1.4 26.4-.2l77.8-15.2c5.7-1.1 9.1-2.9 9.1-4.8V99.5h11.4v31.4c0 3.7 5.3 7.1 13.7 8.7l80.5 15.4c6.9 1.3 14.9 1.3 21.6-.2l72.1-15.1c7.9-1.7 12.9-5 12.9-8.5V14.6c-.1-5.3-10.9-9.6-24.2-9.6z" stroke-linecap="round" stroke-linejoin="round"/>
           <g id="focused-text">
             <path fill="none" d="M256.9 24.1h147.8V124H256.9z"/>
             <path fill="#4E4F56" d="M260.8 32.6l2.8-7.2 2.8 7.2 2.7-7h1.3l-4.1 10.2-2.8-7.2-2.8 7.2-4.1-10.2h1.3l2.9 7z"/>
@@ -350,9 +349,9 @@
       </svg>
     </div>
     <div class="unit xs-1 s-1 m-1-2 l-1-2 xl-1-2">
-      <svg xmlns="http://www.w3.org/2000/svg" id="battery_1_" width="399.3" height="234.8" viewBox="0 0 399.3 234.8">
-        <path id="energy-flow-path-1_1_" fill="none" stroke="#4E4F56" stroke-width="5" stroke-miterlimit="10" d="M47.9 113.5v74.2h11l3.4-16.9 5.3 32.7 5.7-15.8h12" stroke-linecap="round" stroke-linejoin="round"/>
-        <path id="energy-flow-path-1" fill="none" stroke="#4E4F56" stroke-width="4.894" stroke-miterlimit="10" d="M344.5 118v71h-11l-3.4-16.1-5.3 31.3-5.7-15.2h-12" stroke-linecap="round" stroke-linejoin="round"/>
+      <svg xmlns="http://www.w3.org/2000/svg" id="battery-1" width="399.3" height="234.8" viewBox="0 0 399.3 234.8">
+        <path id="energy-flow-path-1" fill="none" stroke="#4E4F56" stroke-width="5" stroke-miterlimit="10" d="M47.9 113.5v74.2h11l3.4-16.9 5.3 32.7 5.7-15.8h12" stroke-linecap="round" stroke-linejoin="round"/>
+        <path id="energy-flow-path-2" fill="none" stroke="#4E4F56" stroke-width="4.894" stroke-miterlimit="10" d="M344.5 118v71h-11l-3.4-16.1-5.3 31.3-5.7-15.2h-12" stroke-linecap="round" stroke-linejoin="round"/>
         <path id="label" fill="#DCD0C0" stroke="#4E4F56" stroke-width="5" stroke-miterlimit="10" d="M371.1 5.1h-128c-9.8 0-17.7 2.2-17.7 4.9v32.8h-10.6V10.1c0-2.7-10.2-4.9-22.8-4.9H27c-12.6 0-22.8 2.2-22.8 4.9v99.2c0 1.6 3.4 3 9.1 3.9l78.2 12.6c7.8 1.3 18.5 1.3 26.5.1l86.8-12.8c6.2-.9 10-2.4 10-4.1V96.9h10.6v12.4c0 1.6 2.6 3 7.1 3.9l60.6 12.6c6.1 1.3 14.3 1.3 20.6.1l67.3-12.8c4.8-.9 7.7-2.4 7.7-4.1V10.1c.1-2.7-7.8-5-17.6-5z" stroke-linecap="round" stroke-linejoin="round"/>
         <g id="receptor-text">
           <path fill="none" d="M11.4 18.1h198.2v75.6H11.4z"/>
@@ -563,9 +562,9 @@
   </div>
 
   <div class="grid">
-      <div class="unit xs-1 s-1 m-1-2 l-1-2">
+    <div class="unit xs-1 s-1 m-1-2 l-1-2">
       <svg id="cups" xmlns="http://www.w3.org/2000/svg" width="560" height="758.7" viewBox="0 0 560 758.7">
-        <path id="label" fill="#DCD0C0" stroke="#4E4F56" stroke-width="8.3448" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M522.8 738.1H56.5c-11 0-20-9-20-20V551c0-11 9-20 20-20h466.3c11 0 20 9 20 20v167.1c0 11-9 20-20 20z"/>
+        <path id="cups-label" fill="#DCD0C0" stroke="#4E4F56" stroke-width="8.3448" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M522.8 738.1H56.5c-11 0-20-9-20-20V551c0-11 9-20 20-20h466.3c11 0 20 9 20 20v167.1c0 11-9 20-20 20z"/>
         <ellipse id="mug-shadow" fill="#9B3D3B" cx="182.4" cy="710.8" rx="113.9" ry="17.5"/>
         <path id="beer-flow" fill="#DB9E60" stroke="#4E4F56" stroke-width="8.3448" stroke-miterlimit="10" d="M160 371.2s-5.3 25.6 0 33.7c5.3 8.1 4.7 28.7 0 37.4s-6.9 37.4-2.4 45.8-19.7 4.1-19.7 4.1-4.4-38.6 0-48.6 8.1-26.2 5.6-38-4.5-25.3-4.5-25.3l21-9.1z"/>
         <g id="tap" stroke="#4E4F56" stroke-width="8.3448" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10">
@@ -576,9 +575,9 @@
         <path id="mug" fill="#DB9E60" stroke="#4E4F56" stroke-width="8.3448" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M99 518.5s5 122.8 3.6 136.8-4.1 38.6-4.8 41.7c-.7 3.1-5.6 9.7 15.7 14.4 21.3 4.7 97.9 7.4 125-.4 27.1-7.8 32.8-8 29.2-22.8-3.6-14.9-8.9-49.1-8.9-49.1L251.3 513c-.1.1-126.2-30.5-152.3 5.5z"/>
         <ellipse id="cup-shadow" fill="#9B3D3B" cx="423.2" cy="710.8" rx="113.9" ry="17.5"/>
         <path id="foam-label" fill="#DCD0C0" stroke="#4E4F56" stroke-width="8.3448" stroke-miterlimit="10" d="M295.9 499.1c.9-3.6 1.4-7.3 1.4-11.2 0-20.1-13.4-36.8-31-40.5-1.8-4.4-4.3-8.4-7.5-11.7 1-2.2 1.5-4.7 1.5-7.3 0-9.7-7.3-17.6-16.4-17.6-2.1 0-4 .4-5.8 1.2-5.9-9-15.6-15-26.7-15-3.1 0-6.2.5-9 1.4-1.6-9.3-10.2-16.4-20.6-16.4-11.5 0-20.9 8.7-20.9 19.4 0 .8.1 1.6.2 2.3-5.5 1.8-10.2 5.3-13.8 9.9-4-2.1-8.5-3.3-13.4-3.3-14.5 0-26.3 10.6-27 23.9-1.5-.3-3-.4-4.5-.4-14.9 0-26.9 12.9-26.9 28.9v.1c-.6 0-1.2-.1-1.8-.1-15.9 0-28.7 13.8-28.7 30.8s12.9 30.8 28.7 30.8c6.8 0 13.1-2.6 18-6.8 5.1 12.2 16.5 20.7 29.7 20.7.5 0 1-.1 1.6-.1 7.4 9.5 18.5 15.5 31 15.5 9 0 17.2-3.1 23.9-8.4 4.4 2 9.3 3.1 14.4 3.1.6 0 1.2 0 1.9-.1 3.8 10.2 13.1 17.5 24 17.5 12.9 0 23.6-10.2 25.5-23.4 7-2.5 13-7.1 17.4-13.1 1.7-.1 3.3-.3 4.9-.6 2.6 10.7 12.2 18.6 23.7 18.6 13.5 0 24.4-10.9 24.4-24.4-.1-11.5-7.8-21-18.2-23.7z"/>
-        <path id="coffee_cup" fill="#DCD0C0" stroke="#4E4F56" stroke-width="8.6871" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M425.2 464.3H321l33.2 246.3 69.7 5.5 72.3-5.5 33.2-246.3z"/>
-        <path id="coffee" fill="#9B3D3B" stroke="#4E4F56" stroke-width="8.6871" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M323.8 485.2s92.3 34.7 202.7 0l-28.7 203s-78.3 35.4-144.6 1.4l-29.4-204.4z"/>
-        <g id="Layer_3" fill="#DCBF96">
+        <path id="coffee-cup" fill="#DCD0C0" stroke="#4E4F56" stroke-width="8.6871" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M425.2 464.3H321l33.2 246.3 69.7 5.5 72.3-5.5 33.2-246.3z"/>
+        <path id="coffee-fill" fill="#9B3D3B" stroke="#4E4F56" stroke-width="8.6871" stroke-linecap="round" stroke-linejoin="round" stroke-miterlimit="10" d="M323.8 485.2s92.3 34.7 202.7 0l-28.7 203s-78.3 35.4-144.6 1.4l-29.4-204.4z"/>
+        <g id="layer-3" fill="#DCBF96">
           <circle cx="136.9" cy="688.3" r="11.4"/>
           <circle cx="190.4" cy="683.5" r="6.1"/>
           <circle cx="233.2" cy="595.1" r="3.9"/>
@@ -642,7 +641,7 @@
           <path d="M225.2 641.1c0 3.1 2.1 6 5.4 6 2.6 0 4.1-1.3 5.4-3.5l2.9 1.7c-1.7 3.1-4.8 4.9-8.3 4.9-5.5 0-8.8-4.1-8.8-9.4 0-5.5 3-9.7 8.8-9.7 5.7 0 8.4 4.2 8.4 9.6v.5h-13.8zm10.3-2.6c-.4-2.7-2.2-4.5-5-4.5-2.7 0-4.7 1.9-5.1 4.5h10.1z"/>
           <path d="M247.3 647.9c0 1.2-1 2.2-2.2 2.2s-2.2-1-2.2-2.2c0-1.2 1-2.2 2.2-2.2s2.2 1 2.2 2.2z"/>
         </g>
-        <g id="beer-text-2_1_" fill="#DB625D">
+        <g id="beer-text-2" fill="#DB625D">
           <path d="M123.5 512.6c-.8 1.8-1.1 4-1.1 6s.3 4.2 1.1 6l-1 .7c-1-1.9-1.4-4.5-1.4-6.7s.4-4.8 1.4-6.7l1 .7z"/>
           <path d="M130 522.7h-1.2v-1c-.5.7-1.2 1.2-2.1 1.2-1.9 0-3-1.6-3-3.4 0-1.7 1.1-3.3 3-3.3.9 0 1.7.5 2.2 1.2v-1h1.2v6.3zm-1.1-3.2c0-1.2-.7-2.2-2-2.2-1.2 0-2 1.1-2 2.2 0 1.2.7 2.3 2 2.3s2-1 2-2.3z"/>
           <path d="M130.6 511.1h1.2v6.4c.5-.7 1.2-1.2 2.2-1.2 1.8 0 2.9 1.6 2.9 3.3 0 1.8-1.1 3.4-3 3.4-.9 0-1.6-.5-2.1-1.2v1h-1.2v-11.7zm5.1 8.4c0-1.2-.7-2.2-2-2.2-1.2 0-2 1.1-2 2.2 0 1.2.7 2.3 2 2.3s2-1 2-2.3z"/>
